# Learn-Django

./: .editorconfig  .flake8  .pre-commit-config.yaml  Makefile  README.rst  mypy.ini  pyproject.toml
core/: manage.py
core/core/utils/: collection.py  collections.py  misc.py
core/project/: urls.py
core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
core/project/settings/templates/: settings.dev.py
