[tool.poetry]
name = "core-tutorials"
version = "0.1.0"
description = ""
authors = ["Kevin Liu <kevin.liu4@mail.mcgill.ca>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.9"
django-filter = "^24.2"
django-split-settings = "^1.3.2"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
